--- a/index.html
+++ b/index.html
@@ -13,26 +13,26 @@
 <body>
     <header>
         <nav>
-            <a class="logo" href="./index.html">web<span class="text">studio</span> </a>
+            <a class="logo" href="./index.html">web<span class="text">Studio</span> </a>
             <ul>
                 <li>
                     <a class="studio" href="./index.html">Studio</a>
                 </li>
                 <li>
-                    <a href="">Portfolio</a>
+                    <a class="studio" href="">Portfolio</a>
                 </li>
                 <li>
-                    <a href="">Contacts</a>
+                    <a class="studio" href="">Contacts</a>
                 </li>
             </ul>
         </nav>
         <address class="address">
             <ul>
                 <li>
-                    <a class="mail" href="mailto:info@devstudio.com">info@devstudio.com</a> 
+                    <a class="address-info" href="mailto:info@devstudio.com">info@devstudio.com</a> 
                 </li>
                 <li>
-                    <a class="phone" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                    <a class="address-info" href="tel:+110001111111">+11 (000) 111-11-11</a>
                 </li>
             </ul>
             
@@ -189,7 +189,7 @@
     </main>
 
     <footer class="footer">
-        <a class="logo" href="./index.html">web<span class="text">studio</span> </a>
+        <a class="logo" href="./index.html">web<span class="text">Studio</span> </a>
         <p class="info">
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
