--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
                 </li>
             </ul>
         </section>
-        <section>
-            <h2 class="portfolio">Our Portfolio</h2>
+        <section class="portfolio">
+            <h2 class="our-portfolio">Our Portfolio</h2>
             <ul>
                 <li>
                     <img src="./images/bank.jpg" width="360" height="300" alt="bank">
