--- a/index.html
+++ b/index.html
@@ -51,21 +51,21 @@
             <h2>Our Futures</h2>
             <ul>
                 <li>
-                    <h3 class="heading3">Strategy</h3>
+                    <h3 class="heading">Strategy</h3>
                     <p class="paragh">
                         Our goal is to identify the business problem to walk away with the perfect and creative solution. 
                     </p>
                 </li>
 
                 <li>
-                    <h3 class="heading3">Punctuality</h3>
+                    <h3 class="heading">Punctuality</h3>
                     <p class="paragh">
                         Bring the key message to the brand's audience for the best price within the shortest possible time. 
                     </p>
                 </li>
 
                 <li>
-                   <h3 class="heading3">Diligence</h3>
+                   <h3 class="heading">Diligence</h3>
                     <p class="paragh">
                         Research and confirm brands with the strongest digital growth opportunities and minimize risk. 
                     </p> 
@@ -74,7 +74,7 @@
                 
 
                 <li>
-                    <h3 class="heading3">Technologies</h3>
+                    <h3 class="heading">Technologies</h3>
                     <p class="paragh">
                         Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
                     </p>
