--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 
     <footer class="footer">
       <a class="logo" href="./index.html"
-        >web<span class="span">Studio</span>
+        >web<span class="footer_second">Studio</span>
       </a>
       <p class="info">
         Increase the flow of customers and sales for your business with digital
